fix link underline spacing

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -132,4 +132,8 @@
   }
 }
 
+.prose a {
+  text-underline-offset: 6px;
+}
+
 
